delete br tag and add css to fix spacing in edit profile

--- a/app/assets/stylesheets/edit-profile.css
+++ b/app/assets/stylesheets/edit-profile.css
@@ -5,6 +5,8 @@
   margin-left: 100px;
   display: block;
   left: 200px;
+  white-space: pre-line;
+  padding-bottom: 20px;
 }
 
 .btn-default {
